2015-02-23  Ron Norman
	* Implemented INDEXED file support for sparse and split keys
	  Most of the compiler code was borrowed from the fileio-rewrite

2015-02-13  Ron Norman

	* Fix to tree.c to only adjust up file record_max for REPORT files

2015-02-12  Ron Norman

	* Merged Report Writer code into 2.0 code base to create a new 2.0
	  with all collective features

2015-01-31  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c : updated valid_time_format and valid_datetime_format to pass
	  decimal points

2015-01-06  Brian Tiffin <btiffin@users.sf.net>

	* cobc/parser.y : fixed segfault with STOP "literal" with the
	  ACCEPT OMITTED feature of waiting for a return attempting
	  to generate code with a null pointer

2015-01-04 Ron Norman (rjn@inglenet.com)
	* Fix for codeoptim.c for cob_add_packed_int to use %% instead of %
	  due to processing by sprintf on certain platforms the % was getting
	  droppped.

2014-12-15  Ron Norman (rjn@inglenet.com)
	* Fix for codeoptim.c and typeck.c to correctly handle SET pointer UP/DOWN
	  on none x86 platforms

2014-12-11  Ron Norman (rjn@inglenet.com)
	* Fixes so WARNING is given if no DETAIL lines in a report

2014-06-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* parser.* : fixing Bug #79 by defining PLUS_KEYWORD: PLUS|+

2014-06-14  Ron Norman (rjn@inglenet.com)

	* Fixes for LINE|COL 0 to get error message

2014-12-02  Sergey Kashyrin <ska@kiska.net>

	* codegen.c : fix for bug #52 incorrect premature memory release (CANCEL) of INITIAL programs

2014-12-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y : fix bug #108 figurative constants not accepted in screen items

2014-11-18  Sergey Kashyrin <ska@kiska.net>

	* field.c : fix bug #89 incorrect LENGTH OF redefined

2014-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (decimal_expand): fix bug #106 allocating cob_decimal too often

2014-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
