@@ -999,13 +999,13 @@ cb_get_int (const cb_tree x)
 	size_t			i;
 	int			val;
 
-	if(x == NULL)		return 0;
 	if(x == cb_int0)	return 0;
 	if(x == cb_int1)	return 1;
-	if(x == cb_int2)	return 2;
-	if(x == cb_int3)	return 3;
-	if(x == cb_int4)	return 4;
-	if(x == cb_int5)	return 5;
+
+	if(x == NULL) {
+		cobc_abort_pr (_("NULL passed to cb_get_int - Aborting"));
+		COBC_ABORT ();
+	}
 
 	if (!CB_LITERAL_P (x)) {
 		cobc_abort_pr (_("Invalid literal cast - Aborting"));
