@@ -3616,14 +3616,28 @@ cob_sys_getopt_long_long (void* so, void* lo, void* idx, const int long_only, vo
 	/*
 	 * Write data back to Cobol
 	 */
+#ifdef	WORDS_BIGENDIAN
+	if (temp[3] == '?' || temp[3] == ':' || temp[3] == 'W' 
+		|| temp[3] == 0) exit_status = temp[3] & 0xFF;
+	else if(temp[3] == -1) exit_status = -1;
+	else exit_status = 3;
+	 /* cob_getopt_long_long sometimes returns and 'int' value and sometimes a 'x   ' in the int */
+	if(temp[0] == 0x00
+	&& temp[1] == 0x00
+	&& temp[2] == 0x00) {
+		temp[0] = temp[3];		/* Move option value to 1st byte and SPACE fill the 'int' */
+		temp[1] = temp[2] = temp[3] = ' ';
+	}
+#else
 	if (temp[0] == '?' || temp[0] == ':' || temp[0] == 'W' 
 		|| temp[0] == -1 || temp[0] == 0) exit_status = return_value;
 	else exit_status = 3;
 
 	for(i = 3; i > 0; i--) {
-		if(temp[i] == 0x00) temp[i] = 0x20;
+		if(temp[i] == 0x00) temp[i] = ' ';
 		else break;
 	}
+#endif
 
 	cob_set_int (COB_MODULE_PTR->cob_procedure_params[2], longind);
 	memcpy (return_char, &return_value, 4);
