@@ -1,4 +1,9 @@
 
+2015-03-03  Ron Norman
+
+	* fileio.c, common.c, common.h updated to resolve little endian
+	  versus big endian issues
+
 2015-03-01  Ron Norman
 
 	* fileio.c updated to return correct status codes for WRITE/REWRITE
